edit for mobile device

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="button">
         <a href="reveal.html">
-            <button id="reveal">Click me if you can't wait</button>
+            <button id="reveal">Click me if you can't wait!</button>
         </a>
     </div>
 </body>
