--- a/reveal.html
+++ b/reveal.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class=container>
-        <h1>It's a boy!</h1>
+        <h1>Boy!</h1>
     </div>
 
     <script src="https://www.wpromotions.eu/confetti.min.js"></script>
